[gd_scene load_steps=9 format=2]

[ext_resource path="res://CHEEMSMUSCULOSO.png" type="Texture" id=1]
[ext_resource path="res://sprites/chemstonauta2.png" type="Texture" id=2]
[ext_resource path="res://CHEEMSMUSCULOSO 2.png" type="Texture" id=3]
[ext_resource path="res://sprites/chestonauta.png" type="Texture" id=4]
[ext_resource path="res://sprites/egg.png" type="Texture" id=5]
[ext_resource path="res://Player.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "huevo",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": false,
"name": "parado",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": false,
"name": "chemsito",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 99.8383
height = 57.7514

[node name="Player" type="Area2D"]
position = Vector2( 313.601, 479.096 )
script = ExtResource( 13 )
Velocidad = 400

[node name="Sprite_player" type="AnimatedSprite" parent="."]
position = Vector2( -16.3521, 16.1393 )
scale = Vector2( 0.5, 0.53 )
frames = SubResource( 1 )
animation = "parado"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -21.3152, 19.6711 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="cambio" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="cambio" to="." method="_on_cambio_timeout"]
